--- a/find.html
+++ b/find.html
@@ -34,6 +34,36 @@
       </div>
     </div>
   </header>
+  <main class="find">
+    <section class="find__options">
+      <div class="find__option">
+        <i class="far fa-address-book"></i>
+        <span class="find__option-title fa-lg">Find</span>
+      </div>
+      <div class="find__option">
+        <i class="fa fa-qrcode"></i>
+        <span class="find__option-title fa-lg">QR Code</span>
+      </div>
+      <div class="find__option">
+        <i class="fa fa-share-square"></i>
+        <span class="find__option-title fa-2x">Share</span>
+      </div>
+      <div class="find__option">
+        <i class="far fa-envelope"></i>
+        <span class="find__option-title fa-lg">Invite via SMS</span>
+      </div>
+    </section>
+    <section class="find__recommended">
+      <header>
+        <h6 class="recommended__title">Recommended Friends</h6>
+        <div class="recommended___none">
+          <span class="recommended__text">You have no recommended friends</span>
+        </div>
+      </header>
+    </section>
+
+  </main>
+
   <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
