--- a/chats.html
+++ b/chats.html
@@ -41,32 +41,36 @@
     </div>
     <ui class="chats__list">
       <li class="chats__chat">
-        <div class="chat__content">
-          <img src="image/avator.jpg">
-          <div class="chat__preview">
-            <h3 class="chat__user">AAAA</h3>
-            <span class="chat__last-message">
-              Hello! This is the test message!
-            </span>
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="image/avator.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">AAAA</h3>
+              <span class="chat__last-message">
+                Hello! This is the test message!
+              </span>
+            </div>
           </div>
-        </div>
-        <span class="chat__data-time">
-          15:55
-        </span>
+          <span class="chat__data-time">
+            15:55
+          </span>
+        </a>
       </li>
       <li class="chats__chat">
-        <div class="chat__content">
-          <img src="image/avator.jpg">
-          <div class="chat__preview">
-            <h3 class="chat__user">CCCCCC</h3>
-            <span class="chat__last-message">
-              hihihhihiiiiiiii!
-            </span>
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="image/avator.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">CCCCCC</h3>
+              <span class="chat__last-message">
+                hihihhihiiiiiiii!
+              </span>
+            </div>
           </div>
-        </div>
-        <span class="chat__data-time">
-          Feb 29
-        </span>
+          <span class="chat__data-time">
+            Feb 29
+          </span>
+        </a>
       </li>
     </ui>
     <div class="chat-btn">
