--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <img src="" alt="">
-          <span class="friends__section-name">AAAAA</span>
+          <a href="profile.html">
+            <img src="image/avator.jpg" alt="">
+            <span class="friends__section-name">AAAAA</span>
+          </a>
         </div>
         <div class="friends__section-row">
-          <img src="" alt="">
+          <img src="image/avator.jpg" alt="">
           <span class="friends__section-name">BBBBB</span>
         </div>
       </div>
@@ -62,7 +64,7 @@
       <div class="friends__section-rows">
         <div class="friends__section-row">
           <div class="friends__section-column">
-            <img src="" alt="">
+            <img src="image/avator.jpg" alt="">
             <span class="friends__section-name">CCCCCC</span>
           </div>
           <span class="friends__section_tagline">
@@ -71,7 +73,7 @@
         </div>
         <div class="friends__section-row">
           <div class="friends__section-column">
-            <img src="" alt="">
+            <img src="image/avator.jpg" alt="">
             <span class="friends__section-name">DDDDDD</span>
           </div>
           <span class="friends__section_tagline">
