--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,9 @@
     </div>
     <div class="header__bottom">
       <div class="header__column">
-        <i class="fa fa-times fa-lg"></i>
+        <a href="index.html">
+          <i class="fa fa-times fa-lg"></i>
+        </a>
       </div>
       <div class="header__column">
 
@@ -35,5 +37,26 @@
       </div>
     </div>
   </header>
+  <main class="profile">
+    <header class="profile__header">
+      <img src="image/avator.jpg" alt="">
+      <h3 class="profile__header-title">ch4rli3kop</h3>
+    </header>
+    <input type="text" placeholder="pch2180@gmail.com">
+    <div class="profile__actions">
+      <div class="profile__action">
+        <span class="profile__action-circle">
+          <i class="fa fa-comment fa-2x"></i>
+        </span>
+        <span class="profile__action-title">My Chatroom</span>
+      </div>
+      <div class="profile__action">
+        <span class="profile__action-circle">
+          <i class="fa fa-user-edit fa-2x"></i>
+        </span>
+        <span class="profile__action-title">Edit Profile</span>
+        </div>
+    </div>
+  </main>
 </body>
 </html>
