chats.css done!

--- a/chats.html
+++ b/chats.html
@@ -40,7 +40,7 @@
       <i class="fa fa-search"></i>
       <input type="text" placeholder="Find friends, chats, Plus Friends">
     </div>
-    <ui class="chats__list">
+    <ul class="chats__list">
       <li class="chats__chat">
         <a href="chat.html">
           <div class="chat__content">
@@ -73,7 +73,87 @@
           </span>
         </a>
       </li>
-    </ui>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="image/avator.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">CCCCCC</h3>
+              <span class="chat__last-message">
+                hihihhihiiiiiiii!
+              </span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            Feb 29
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="image/avator.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">CCCCCC</h3>
+              <span class="chat__last-message">
+                hihihhihiiiiiiii!
+              </span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            Feb 29
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="image/avator.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">CCCCCC</h3>
+              <span class="chat__last-message">
+                hihihhihiiiiiiii!
+              </span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            Feb 29
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="image/avator.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">CCCCCC</h3>
+              <span class="chat__last-message">
+                hihihhihiiiiiiii!
+              </span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            Feb 29
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="image/avator.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">CCCCCC</h3>
+              <span class="chat__last-message">
+                hihihhihiiiiiiii!
+              </span>
+            </div>
+          </div>
+          <span class="chat__data-time">
+            Feb 29
+          </span>
+        </a>
+      </li>
+    </ul>
     <div class="chat-btn">
       <i class="fa fa-comment"></i>
     </div>
