--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <a href="profile.html">
-            <img src="image/avator.jpg" alt="">
-            <span class="friends__section-name">AAAAA</span>
+          <img src="image/avator.jpg" alt="">
+          <a href="profile.html" class="friends__section-name">
+            AAAAA
           </a>
         </div>
         <div class="friends__section-row">
@@ -63,21 +63,21 @@
         <h6 class="friends__section-title">Friends</h6>
       </header>
       <div class="friends__section-rows">
-        <div class="friends__section-row">
+        <div class="friends__section-row with-tagline">
           <div class="friends__section-column">
             <img src="image/avator.jpg" alt="">
             <span class="friends__section-name">CCCCCC</span>
           </div>
-          <span class="friends__section_tagline">
+          <span class="friends__section-tagline">
             Life is short. So live your life.
           </span>
         </div>
-        <div class="friends__section-row">
+        <div class="friends__section-row with-tagline">
           <div class="friends__section-column">
             <img src="image/avator.jpg" alt="">
             <span class="friends__section-name">DDDDDD</span>
           </div>
-          <span class="friends__section_tagline">
+          <span class="friends__section-tagline">
             hhahahhhhaaahahaaaaa.
           </span>
         </div>
