--- a/find.html
+++ b/find.html
@@ -47,7 +47,7 @@
       </div>
       <div class="find__option">
         <i class="fa fa-share-square"></i>
-        <span class="find__option-title fa-2x">Share</span>
+        <span class="find__option-title fa-lg">Share</span>
       </div>
       <div class="find__option">
         <i class="far fa-envelope"></i>
@@ -57,10 +57,10 @@
     <section class="find__recommended">
       <header>
         <h6 class="recommended__title">Recommended Friends</h6>
-        <div class="recommended___none">
-          <span class="recommended__text">You have no recommended friends</span>
-        </div>
       </header>
+      <div class="recommended__none">
+        <span class="recommended__text">You have no recommended friends</span>
+      </div>
     </section>
 
   </main>
