--- a/more.html
+++ b/more.html
@@ -48,7 +48,7 @@
     </header>
     <section class="more__options">
       <div class="more__option">
-        <i class="fa fa-smile fa-lg"></i>
+        <i class="far fa-smile fa-lg"></i>
         <span class="more__option-title">Emoticons</span>
       </div>
       <div class="more__option">
@@ -60,7 +60,7 @@
         <span class="more__option-title">Plus Friends</span>
       </div>
       <div class="more__option">
-        <i class="fa fa-user-circle fa-lg"></i>
+        <i class="far fa-user-circle fa-lg"></i>
         <span class="more__option-title">Account</span>
       </div>
     </section>
@@ -83,7 +83,7 @@
           <span class="plus-friends__item-title">Store</span></div>
         <div class="plus-friends__item">
           <i class="fa fa-tv"></i>
-          <span class="plus-friends__item-title">TV Channel/Radio</span></div>
+          <span class="plus-friends__item-title">TV</span></div>
         <div class="plus-friends__item">
           <i class="fa fa-screwdriver"></i>
           <span class="plus-friends__item-title">Creation</span></div>
@@ -101,7 +101,7 @@
           <span class="plus-friends__item-title">Movies/Music</span></div>
       </div>
     </section>
-    <section class="more__options">
+    <section class="more__links">
       <div class="more__option">
         <img src="image/image1.png" class="more__options-image">
         <span class="more__options-title">Kakao Story</span>
