--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
   <title>Profile</title>
 </head>
 <body>
-  <header class="top-header">
+  <header class="top-header top-header--transparent">
     <div class="header__top">
       <div class="header__column">
         <i class="far fa-paper-plane"></i>
