--- a/profile.html
+++ b/profile.html
@@ -40,23 +40,27 @@
   </header>
   <main class="profile">
     <header class="profile__header">
-      <img src="image/avator.jpg" alt="">
-      <h3 class="profile__header-title">ch4rli3kop</h3>
-    </header>
-    <input type="text" placeholder="pch2180@gmail.com">
-    <div class="profile__actions">
-      <div class="profile__action">
-        <span class="profile__action-circle">
-          <i class="fa fa-comment fa-2x"></i>
-        </span>
-        <span class="profile__action-title">My Chatroom</span>
+      <div class="profile__header-container">
+        <img src="image/avator.jpg" alt="">
+        <h3 class="profile__header-title">ch4rli3kop</h3>
       </div>
-      <div class="profile__action">
-        <span class="profile__action-circle">
-          <i class="fa fa-user-edit fa-2x"></i>
-        </span>
-        <span class="profile__action-title">Edit Profile</span>
+    </header>
+    <div class="profile__container">
+      <input type="text" placeholder="pch2180@gmail.com">
+      <div class="profile__actions">
+        <div class="profile__action">
+          <span class="profile__action-circle">
+            <i class="fa fa-comment fa-lg"></i>
+          </span>
+          <span class="profile__action-title">My Chatroom</span>
         </div>
+        <div class="profile__action">
+          <span class="profile__action-circle">
+            <i class="fa fa-user-edit fa-lg"></i>
+          </span>
+          <span class="profile__action-title">Edit Profile</span>
+          </div>
+      </div>
     </div>
   </main>
 </body>
